examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx:39:5
//    |
// 39 |     match w {
//    |     ^^^^^^^^^
// 40 |         Boxed(OkI(v)) -> v,
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
// 41 |         Empty -> 0,
//    | ^^^^^^^^^^^^^^^^^^^
// 42 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E083: nested constructor coverage must be complete for unary wrapper constructors.

data ResultI {
    OkI(Int),
    ErrI(Int),
}

data Wrap {
    Boxed(ResultI),
    Empty,
}

fn score(w: Wrap) -> Int {
    match w {
        Boxed(OkI(v)) -> v,
        Empty -> 0,
    }
}

fn main() {
    score(Empty)
}
